--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 NODE_ENV=development
 NEXT_PUBLIC_API_URL="https://sponsoring.dev2.impierce.com/graphql"
 NEXT_PUBLIC_WS_URL="wss://sponsoring.dev2.impierce.com/graphql"
-# Shared password for basic authentication (required)
-AUTH_PASSWORD="your-secure-password-here"
+BASIC_AUTH_PASSWORD="your-secure-password-here"
